<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.example.indproproject.models.Row" />
    </data>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        app:cardElevation="@dimen/margin_6dp"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/margin_6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivFactImageUrl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/iv_fact_image_width"
                android:scaleType="centerCrop"
                android:contentDescription="@string/txt_country_fact_image"
                android:layout_margin="@dimen/margin_8dp"
                android:src="@{(String)model.imageHref,default=@drawable/ic_launcher_background}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_8dp"
                android:textSize="@dimen/txt_size_16sp"
                android:text="@string/txt_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:text="@{model.title}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_8dp"
                android:textSize="@dimen/txt_size_16sp"
                android:text="@string/txt_description"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:text="@{model.description}" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>